<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.finos.legend</groupId>
    <artifactId>legend-lite</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Legend Lite</name>
    <description>
        A clean-room implementation of FINOS Legend Engine core.
        100% SQL Push-Down execution against DuckDB and SQLite.
    </description>

    <modules>
        <module>core</module>
        <module>nlq</module>
        <module>pct</module>
        <module>parser-equivalence</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- Dependency versions (engine only) -->
        <!-- 1.4.4.0, not 1.5.0.0: DuckDB 1.5.0 returns ZERO rows for
             `SELECT .. FROM (.. WHERE .. LIMIT 1) t WHERE t.c IS NOT NULL`
             over a join chain (also with the optimizer disabled; open
             upstream report duckdb/duckdb#21160 "Issues around LIMIT").
             Witness: NavigationDepthTest first()-then-association. -->
        <duckdb.version>1.4.4.0</duckdb.version>
        <sqlite.version>3.47.1.0</sqlite.version>
        <junit.version>5.11.3</junit.version>
        <archunit.version>1.3.0</archunit.version>

        <!-- THE UPSTREAM RELEASE — one number, everywhere. These MUST equal
             LEGEND_ENGINE_RELEASE / LEGEND_PURE_RELEASE in tools/oracle-pins.env
             (Maven cannot source that file for dependency versions, so the
             value is repeated here and tools/version-report.sh in check mode,
             run in CI beside the oracle-roots check, fails the build when they
             disagree). pct and parser-equivalence read ${legend.engine.version}
             / ${legend.pure.version} from here and declare NO version of their
             own; core declares no org.finos.legend dependency at all
             (tools/classpath-convergence.sh asserts both). The pure version is
             DERIVED: it is the <legend.pure.version> the engine release's own
             pom declares — never chosen independently. -->
        <legend.engine.version>4.138.2</legend.engine.version>
        <legend.pure.version>5.92.0</legend.pure.version>

        <!-- THE ORACLE ROOTS: the legend-engine / legend-pure source
             checkouts the tests read as the spec (corpus, PCT channel B,
             parser parity, the prelude generator, the typing census).
             Forwarded to every test JVM as the legend.engine.root /
             legend.pure.root SYSTEM PROPERTIES (surefire config below), so
             the precedence is the same for tools/allgates.sh, a hand mvn
             and CI:
                 -Dlegend.engine.root=...          (command line)
               > LEGEND_ENGINE_ROOT=...             (environment; profile below)
               > ${user.home}/legend/legend-engine  (this default)
             The commits those checkouts must sit on are pinned in
             tools/oracle-pins.env. -->
        <legend.engine.root>${user.home}/legend/legend-engine</legend.engine.root>
        <legend.pure.root>${user.home}/legend/legend-pure</legend.pure.root>
    </properties>

    <profiles>
        <!-- env -> property, one profile per variable (Maven activates a
             profile on ONE property; each var is honoured independently). -->
        <profile>
            <id>oracle-engine-root-from-env</id>
            <activation>
                <property>
                    <name>env.LEGEND_ENGINE_ROOT</name>
                </property>
            </activation>
            <properties>
                <legend.engine.root>${env.LEGEND_ENGINE_ROOT}</legend.engine.root>
            </properties>
        </profile>
        <profile>
            <id>oracle-pure-root-from-env</id>
            <activation>
                <property>
                    <name>env.LEGEND_PURE_ROOT</name>
                </property>
            </activation>
            <properties>
                <legend.pure.root>${env.LEGEND_PURE_ROOT}</legend.pure.root>
            </properties>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>org.finos.legend</groupId>
                <artifactId>legend-lite-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- ArchUnit (test scope; for core/ wall enforcement) -->
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
            </dependency>

            <!-- DuckDB JDBC Driver -->
            <dependency>
                <groupId>org.duckdb</groupId>
                <artifactId>duckdb_jdbc</artifactId>
                <version>${duckdb.version}</version>
            </dependency>

            <!-- SQLite JDBC Driver -->
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite.version}</version>
            </dependency>

            <!-- JUnit 5 -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
            </dependency>

            <!-- INV-5 (tools/classpath-convergence.sh): the upstream-facing
                 modules must resolve every SHARED artifact at ONE version.
                 With one release every org.finos.legend.* converges by
                 itself; these four third-party artifacts do NOT, because
                 Maven's nearest-wins picks legend-pure's own (older) managed
                 versions on pct's graph and the engine's on parser-
                 equivalence's. The engine release's OWN root pom manages all
                 four for its whole reactor — the PCT framework included — so
                 the engine's values are what upstream actually runs with.
                 DERIVED, not chosen: each equals the engine checkout's
                 <hikaricp.version> / <commons-lang3.version> /
                 <httpcore.version> / <junit.version> at the pinned release
                 (tools/version-report.sh INV-6 compares them). Measured
                 2026-09-10 at 4.138.2: divergent 71 -> 4 -> 0. -->
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>7.0.2</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.18.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpcore</artifactId>
                <version>4.4.13</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                    <!-- THE ENGINE'S TEST CLOCK: legend-engine runs every
                         test JVM under -Duser.timezone=GMT (its root pom's
                         surefire.vm.params) and its goldens were minted
                         there. Without the pin our H2 replay oracle read
                         now() in the machine's LOCAL zone while DuckDB read
                         it in UTC, so a now()-relative golden
                         (testGenerateDateDiffExpressionForH2ForDifferenceIn
                         Days) row-verified only while the two zones shared a
                         calendar date — the migration ratchet moved by one
                         test between 21:00 and midnight local (2026-09-01
                         attribution: two same-tree HEAD sweeps at 877/1696
                         against the pinned 876/1697). One clock, the
                         engine's. -->
                    <configuration>
                        <argLine>-Duser.timezone=GMT</argLine>
                        <!-- the oracle roots (properties above) reach every
                             test JVM in every module through here -->
                        <systemPropertyVariables>
                            <legend.engine.root>${legend.engine.root}</legend.engine.root>
                            <legend.pure.root>${legend.pure.root}</legend.pure.root>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
